# py-scrcpy-client

./: .buildinfo  .gitignore  .pdm.toml  Makefile  README.md  __init__.py  control.py  demo.py  entry.py  genindex.html  guide.html  index.html  nuitka_build.bat  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  scrcpy.html  search.html  searchindex.js  test.py  upx.py  viewer.py
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml
_modules/: index.html
_modules/scrcpy/: control.html  core.html
_sources/: guide.md.txt  index.md.txt  scrcpy.md.txt  scrcpy.rst.txt
docs/: conf.py
docs/source/: conf.py  guide.md  index.rst
scrcpy/: __init__.py  const.py  control.py  core.py  event.py  muti_core.py  ui.py
scrcpy_ui/: __init__.py  config_edit.py  config_edit.ui  frame_viewer.py  logger.py  main.py  main.ui  mainwindow.ui  region_save_dialog.py  schemas.py  screen.py  screen.ui  single.ui  ui_config_edit.py  ui_main.py  ui_screen.py  ui_single.py  video_widget.py  window_config_edit.py  window_main.py  window_screen.py  worker.py
scrcpy_ui/scrcpy/: control.py
scrcpy_ui/ui/: QCore.py  __init__.py  frame_viewer.ui  logger.ui  main.ui  ui_frame_viewer.py  ui_logger.py  ui_main.py  ui_region_save_dialog.py
scrcpy_ui/utils/: client_mixin.py  mouse_recorder.py
script/: check.py  lint.py
scripts/: check.py  lint.py
tests/: test_control.py  test_core.py  test_video_data.pkl  utils.py
workers/: __init__.py  schemas.py  server.py  thread_worker.py  utils.py
