[tool.poetry]
name = "scrcpy-client"
version = "0.4.6"
description = "A client of scrcpy"
authors = ["lengyue <lengyue@lengyue.me>"]
readme = "README.md"
repository = "https://github.com/leng-yue/py-scrcpy-client"
license = "MIT"
packages = [
    { include = "scrcpy" },
    { include = "scrcpy_ui" },
]

[tool.poetry.scripts]
py-scrcpy = "scrcpy_ui:main"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
av = "^9.0.0"
opencv-python = "^4.5.0"
adbutils = "^1.0.8"

# Optional dependencies for ui
PySide6 = { version = "^6.0.0", optional = true }

[tool.poetry.extras]
ui = ["PySide6"]

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "*"
black = "^22.3.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
Sphinx = "^4.1.2"
myst-parser = "^0.17.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
